--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,17 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px; 
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
     <p>
         Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <!--tamanho padrao : 300x150-->
+        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+            <a href="https://www.cursoemvideo.com">Curso em video</a> <!--Conteudo entre as tags iframe, so aparece quando o navegador nao e compativel com o iframe-->
+        </iframe>
         para aprender a programar
      </p>
+
      <p>
-         O meu repositorio
-         <iframe src="https://github.com/SheltonFr/html-css-js/tree/Primeira-passagem" frameborder="0"></iframe>
+         O meu repositorio do Guanabara
+         <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+            <a href="https://gustavoguanabara.github.io"> Repositorio do guanabara</a>
+         </iframe>
          é bem interessante
      </p>
 </body>
