--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="style/style.css" media="all">
+    <link rel="stylesheet" href="style/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img src="img/icon-phone.png" alt="Acessando via smartphone" id="phone">
+        <img src="img/icon-tablet.png" alt="Acessado via tablet" id="tablet">
+        <img src="img/icon-print.png" alt="Versao para impressao" id="print">
+        <img src="img/icon-pc.png" alt="Versao desktop" id="pc">
+        <img src="img/icon-tv.png" alt="Versai para tv" id="tv">
+    </main>
 </body>
 </html>
